--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ management.endpoint.shutdown.enabled=true
 info.app.name=Spring Boot Restful Web Services
 info.app.description=Spring Boot Restful Web Services Demo
 info.app.version=1.0.0
+
+#active docker profile - when run with docker will run application-docker.properties file
+spring.profiles.active=docker
